# linux-audit

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  check_xlsx.py  fix_xlsx.py  hosts.example.txt  linux_audit.py  pyproject.toml
docs/: PLAN_SCHEMA.md
examples/: sample_audit.xlsx  sample_plan.json
tests/: test_linux_audit.py
