[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "linux-audit"
version = "1.0.0"
description = "Agentless SSH inventory & security-hardening baseline for Linux fleets, exported to Excel."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Vid Košir" }]
keywords = ["linux", "audit", "security", "hardening", "ssh", "inventory", "cis", "sysadmin"]
dependencies = ["openpyxl>=3.0"]

[project.urls]
Homepage = "https://github.com/vikozs/linux-audit"
Issues = "https://github.com/vikozs/linux-audit/issues"

[project.scripts]
linux-audit = "linux_audit:main"

[tool.setuptools]
py-modules = ["linux_audit", "check_xlsx", "fix_xlsx"]
